--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "cookie-parser": "^1.4.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "qrcode": "^1.5.1"
   }
 }
